# shalat-reminder-app

./: Cargo.toml  README.md  build.rs
data/: lokasi.json  settings.ini
src/: main.rs
ui/: Footer.slint  ListJadwalShalat.slint  SettingsDialog.slint  app-window.slint
