[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.13"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.41"
misykat = "4.1.2"
rodio = "0.21.1"

[build-dependencies]
slint-build = "1.8.0"

[profile.release]
opt-level = "z"          # size optimized
lto = true               # link-time optimization
codegen-units = 1        # supaya lebih efisien
panic = "unwind"          # (opsional) lebih kecil dari 'unwind'
strip = true             # sejak Rust 1.59, akan strip symbols juga